--- a/routes/src/app/pages/home/home.component.html
+++ b/routes/src/app/pages/home/home.component.html
@@ -1,1 +1,136 @@
 <p>home works!</p>
+
+<div class="mb-16">
+  <div>
+    <div id="htmlData">
+      <section class="w-full border h-[200px] border-black ml-4 flex">
+        <div class="w-1/5 h-full border-black border-r max-w-[200px]">
+
+        </div>
+        <div class="w-4/5 h-full border-black border-r text-center">
+          <h2 class="text-3xl font-bold mt-2">Plano de Auditoria Spie</h2>
+          <span class="font-bold text-red-500 mt-4 text-xl">F-09</span>
+          <span class="font-bold text-xl ml-4">(Rascunho)</span>
+          <p class="mt-2">{{dados.portaria}}</p>
+          <div class="flex justify-between">
+            <p class=" ml-4 text-2xl mt-4">Processo: <span class="text-red-500">{{dados.processo}}</span></p>
+            <p class=" mr-4 text-2xl mt-4">Data De Impressão: {{dados.dtImpressao}}</p>
+          </div>
+        </div>
+        <div class="w-1/5 h-full  max-w-[200px]">
+
+        </div>
+      </section>
+      <section class="w-full border h-[30px] border-black ml-4 flex">
+        <div class="w-2/4 border-r border-black h-full bg-slate-300">
+          <p class="font-bold ml-2 ">Empresa:</p>
+        </div>
+        <div class="w-1/4 border-r border-black h-full bg-slate-300">
+          <p class="font-bold ml-2 ">Data Inicio:</p>
+        </div>
+        <div class="w-1/4 border-r border-black h-full bg-slate-300">
+          <p class="font-bold ml-2 ">Data Conclusão:</p>
+        </div>
+      </section>
+      <section class="w-full border h-[30px] border-black ml-4 flex">
+        <div class="w-2/4 border-r border-black h-full">
+          <p class=" ml-2 ">{{dados.Empresa}}</p>
+        </div>
+        <div class="w-1/4 border-r border-black h-full">
+          <p class=" ml-2 ">{{dados.dtInicio}}</p>
+        </div>
+        <div class="w-1/4 border-r border-black h-full">
+          <p class="ml-2 ">{{dados.dtTermino}}</p>
+        </div>
+      </section>
+      <section class="w-full border h-[30px] border-black ml-4">
+        <div class="w-full border-r border-black h-full bg-slate-300">
+          <p class="font-bold ml-2 ">Tipo de Auditoria:</p>
+        </div>
+        <div class="w-full border border-black h-full">
+          <p class=" ml-2 ">{{dados.tipoAuditoria}}</p>
+        </div>
+      </section>
+      <section class="w-full border h-[30px] border-black ml-4 mt-6">
+        <div class="w-full border-r border-black h-full bg-slate-300">
+          <p class="font-bold ml-2 ">Objetivo:</p>
+        </div>
+        <div class="w-full border border-black h-full">
+          <p class=" ml-2 ">{{dados.objetivo}}</p>
+        </div>
+      </section>
+      <section class="w-full border h-[30px] border-black ml-4 mt-6">
+        <div class="w-full border-r border-black h-full bg-slate-300">
+          <p class="font-bold ml-2 ">Escopo:</p>
+        </div>
+        <div class="w-full border border-black h-full">
+          <p class=" ml-2 ">{{dados.escopo}}</p>
+        </div>
+      </section>
+      <section class="w-full border h-[30px] border-black ml-4 mt-10">
+        <div class="w-full border-r border-black h-full bg-slate-300">
+          <p class="font-bold ml-2 ">Equipe de Auditoria:</p>
+        </div>
+        <div class="w-full border border-black h-full flex">
+          <div class="w-1/2 border-black border-r ml-2">Lider </div>
+          <div class="w-1/2 ml-2">{{dados.liderEquipe}}</div>
+        </div>
+      </section>
+      <section class="w-full border h-[30px] border-black ml-4 mt-10 flex">
+        <div class="w-1/5 pl-2 border-r border-black h-full bg-slate-300 font-bold">Item:</div>
+        <div class="w-2/5 pl-2 border-r border-black h-full bg-slate-300 font-bold">Atividade</div>
+        <div class="w-1/5 pl-2 border-r border-black h-full bg-slate-300 font-bold">Data:</div>
+        <div class="w-1/5 pl-2 border-r border-black h-full bg-slate-300 font-bold">Auditores</div>
+      </section>
+      <section class="w-full border h-[30px] border-black ml-4 flex">
+        <div class="w-1/5 pl-2 border-r border-black h-full">{{dados.item}}</div>
+        <div class="w-2/5 pl-2 border-r border-black h-full">{{dados.atividade}}</div>
+        <div class="w-1/5 pl-2 border-r border-black h-full">{{dados.dtAtividade}}</div>
+        <div class="w-1/5 pl-2 border-r border-black h-full">{{dados.auditores}}</div>
+      </section>
+      <section class="w-full border h-[30px] border-black ml-4 mt-6">
+        <div class="w-full border-r border-black h-full bg-slate-300">
+          <p class="font-bold ml-2 ">Observações Relataveis:</p>
+        </div>
+        <div class="w-full border border-black h-full">
+          <p class=" ml-2 ">{{dados.obs}}</p>
+        </div>
+      </section>
+      <section class="w-full border h-[30px] border-black ml-4 mt-10 flex">
+        <div class="w-1/2 border-r border-black h-full bg-slate-300">
+          <p class="font-bold ml-2 ">Auditor Lider:</p>
+        </div>
+        <div class="w-1/2 border-r border-black h-full bg-slate-300">
+          <p class="font-bold ml-2 ">Assinatura:</p>
+        </div>
+      </section>
+      <section class="w-full border h-[30px] border-black ml-4 flex">
+        <div class="w-1/2 border-r border-black h-full">
+          <p class="font-bold ml-2 ">{{dados.liderEquipe}}</p>
+        </div>
+        <div class="w-1/2 border-r border-black h-full">
+        </div>
+      </section>
+      <section class="w-full border h-[30px] border-black ml-4 mt-6 flex">
+        <div class="w-1/2 border-r border-black h-full bg-slate-300">
+          <p class="font-bold ml-2 ">Representante SPIE:</p>
+        </div>
+        <div class="w-1/2 border-r border-black h-full bg-slate-300">
+          <p class="font-bold ml-2 ">Assinatura:</p>
+        </div>
+      </section>
+      <section class="w-full border h-[30px] border-black ml-4 flex">
+        <div class="w-1/2 border-r border-black h-full">
+          <p class="font-bold ml-2 ">{{dados.representanteSpie}}</p>
+        </div>
+        <div class="w-1/2 border-r border-black h-full">
+        </div>
+      </section>
+    </div>
+  </div>
+</div>
+<div class="col-md-4 text-center">
+  <button (click)="convertToPDF()">convertToPDF</button>
+  <button (click)="createPdf()">criar PDF</button>
+  <button class="btn btn-success btn-block" (click)="openPDF()">Download PDF</button>
+</div>
