--- a/routes/src/app/shared/menu/menu.component.html
+++ b/routes/src/app/shared/menu/menu.component.html
@@ -1,7 +1,7 @@
 <header>
   <nav>
     <ul>
-      <li><a routerLink="/" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">Home</a></li>
+      <li><a routerLink="/" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" (click)="busca()">Home</a></li>
       <li><a routerLink="/sobre" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">Sobre</a></li>
       <li><a routerLink="/dashboard" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">Dashboard</a></li>
       <li><a [routerLink]="['/404']" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">Error</a></li>
